prow/asm/tester/configs/caproxy/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-connectivity
spec:
  podSelector:
    matchLabels:
      app: sleep
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: squid-proxy-ns
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - ipBlock:
            # currently matches all requests to metadata.internal. May need to change in the future
            cidr: 169.254.0.0/16
